src/views/MyProfile/myProfile.scss
@import '../../vars';

@media (min-width: $break-xs) {
  .contact-grid {
    align-content: center;
    justify-content: center;
  }
}

.email-link {
  color: #000;
  font-size: 28px;
  transition: color 200ms;
}

.email-link-container:hover .email-link {
  transition: color 200ms;
  color: $primary-cyan;
}

.email-link-container:not(:hover) .email-link {
  transition: color 200ms;
  color: #000;
}

.icon {
  color: #000;
  font-size: 28px;
  transition: color 200ms;

  &:hover {
    color: $primary-cyan;
    cursor: pointer;
  }
}

.edit-icon {
  color: #000;
  transition: color 200ms;

  &:hover {
    color: $primary-cyan;
    cursor: pointer;
  }
}

.photoUploader {
  justify-content: center;
  align-items: center;
  &:hover {
    cursor: pointer;
  }
}

@media (min-width: $break-sm) {
  .profile-image {
    position: 'relative';
    opacity: 1;
    background-color: 'black';
    height: 200;
    width: 200;
    .tile-bar {
      transition: opacity 0.3s;
      opacity: 0; // make tile bar only visible on hover
      border-radius: 0 0 0.5rem 0.5rem;
      height: 64px;
      background: transparentize(
        $neutral-dark-gray,
        0.3
      ); // Make titles more readable over image background
      // Make space for a two-line title
      text-align: center;
    }
    &:hover {
      .tile-bar {
        opacity: 1;
      }
    }
  }
}
@media (min-width: 0px) {
  .profile-image {
    position: 'relative';
    opacity: 1;
    background-color: 'black';
    height: 200;
    width: 200;
  }
  .tile-bar {
    transition: none;
    opacity: 1;
    border-radius: 0 0 0.5rem 0.5rem;
    background: transparentize($neutral-dark-gray, 0.3);
    // Make titles more readable over image background
    height: 64px;
    // Make space for a two-line title
    text-align: center;
  }
}
.rounded-corners {
  border-radius: 0.5rem;
}
.tooltip {
  background-color: $neutral-dark-gray !important;
}
.prof-dropzone {
  transition: border-color 0.3s, background-color 0.3s, box-shadow 0.3s;
  width: 18rem;
  height: 18rem;
  justify-content: center;
  display: flex;
  align-items: center;
  border-style: dashed;
  border-width: 0.2rem;
  border-radius: 1rem;
  border-color: darkgray;
  &:hover {
    background-color: #dddddd;
    box-shadow: 0 0 0 0.25rem #dddddd;
  }
}

